# Todos

./: .gitignore  CMakeLists.txt  README.md
src/: file.cpp  file.h  main.cpp  run.cpp  run.h  taskwindow.cpp  taskwindow.h  types.h
test/: test.yaml
